cloudformation_template.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "My CloudFormation Training template"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        -
          Key: Name
          Value: MyCFVPC
  
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    DependsOn: VPC
    Properties:
      Tags:
        -
          Key: Name
          Value: MyCFInternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn:
      - VPC
      - InternetGateway
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    DependsOn: VPC
    Properties:
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: 'us-west-2a'
      VpcId: !Ref VPC
      Tags:
        -
          Key: Name
          Value: MyCFPublicSubnet
  
  PrivateSubnet:
    Type: AWS::EC2::Subnet
    DependsOn: VPC
    Properties:
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: 'us-west-2b'
      VpcId: !Ref VPC
      Tags:
        -
          Key: Name
          Value: MyCFPrivateVPC
      
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        -
          Key: Name
          Value: MyCFPublicRouteTable
  
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: 
      - InternetGateway
      - VPC
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VPC
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Allow http and SSH to webserver
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VPC
    Properties:
      VpcId: !Ref VPC
      Description: Open DB port
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
